--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <a class="skip" href="#main">Aller au contenu</a>
 
   <!-- ===== Header ===== -->
   <header class="header">
@@ -39,7 +38,7 @@
           </div>
         </div>
         <div class="panel">
-          <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop" alt="Développeur travaillant sur son ordinateur">
+          <img src="img/Numero1.svg" alt="Développeur travaillant sur son ordinateur">
         </div>
       </div>
     </section>
@@ -87,13 +86,11 @@
                 <img class="proj-slide next" alt="">
               </div>
 
-              <!-- Titre + tag visibles par défaut -->
               <div class="meta">
                 <div class="h3">Projet Mise au vert</div>
                 <span class="tag">WebApp</span>
               </div>
 
-              <!-- Description — masquée par défaut, visible au survol/focus -->
               <div class="proj-desc" aria-hidden="true">
                 <p class="muted"><strong>Mise au vert</strong> est une application web de gestion de pensions animales.</p>
                 <p>Elle propose deux espaces :</p>
@@ -105,37 +102,22 @@
 
             <!-- CARTE 2 -->
             <article class="card project" tabindex="0"
-              data-images="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?q=80&w=1200&auto=format&fit=crop,
-                           https://images.unsplash.com/photo-1510557880182-3d4d3cba35a5?q=80&w=1200&auto=format&fit=crop,
-                           https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?q=80&w=1200&auto=format&fit=crop">
+              data-images="img/ImagePeakForm4.jpg,
+                           img/ImagePeakForm2.jpg,
+                           img/ImagePeakForm3.jpg,
+                           img/ImagePeakForm1.jpg">
               <div class="proj-slider">
-                <img class="proj-slide current" src="https://images.unsplash.com/photo-1512496015851-a90fb38ba796?q=80&w=1200&auto=format&fit=crop" alt="Application mobile">
+                <img class="proj-slide current" src="img/ImagePeakForm4.jpg" alt="Application mobile">
                 <img class="proj-slide next" alt="">
               </div>
               <div class="meta">
-                <div class="h3">Projet B</div>
-                <span class="tag">Mobile</span>
+                <div class="h3">Application mobile PeakForm</div>
+                <span class="tag">Flutter</span>
               </div>
               <div class="proj-desc" aria-hidden="true">
-                <p class="muted">Application Android Kotlin avec API REST.</p>
-              </div>
-            </article>
-
-            <!-- CARTE 3 -->
-            <article class="card project" tabindex="0"
-              data-images="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop,
-                           https://images.unsplash.com/photo-1517433456452-f9633a875f6f?q=80&w=1200&auto=format&fit=crop,
-                           https://images.unsplash.com/photo-1492724441997-5dc865305da7?q=80&w=1200&auto=format&fit=crop">
-              <div class="proj-slider">
-                <img class="proj-slide current" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Site vitrine">
-                <img class="proj-slide next" alt="">
-              </div>
-              <div class="meta">
-                <div class="h3">Projet C</div>
-                <span class="tag">Website</span>
-              </div>
-              <div class="proj-desc" aria-hidden="true">
-                <p class="muted">Site performant SEO, design responsive.</p>
+                <p class="muted"><strong>PeakForm</strong> est une application mobile de suivi des séances d'entraînement.</p>
+                <p>Permet d’enregistrer ses séances et de visualiser sa progression grâce à des graphes clairs et motivants.</p>
+                <p>Objectif : simplifier le suivi et la visualisation des entraînements.</p>
               </div>
             </article>
           </div>
@@ -145,12 +127,22 @@
       </div>
     </section>
 
-    <!-- ===== Contact (simple, sans image) ===== -->
+    <!-- ===== Contact (branché sur Web3Forms) ===== -->
     <section id="contact" class="section container">
       <h2 class="h2">Contactez-moi</h2>
       <p class="muted">Une idée, un projet, un stage ? Écrivez-moi, je vous réponds rapidement.</p>
 
-      <form class="form-card" action="#" method="post" onsubmit="return false" aria-label="Formulaire de contact">
+      <!-- Version AJAX (pas de rechargement) -->
+      <form id="contactForm" class="form-card" onsubmit="return false" aria-label="Formulaire de contact">
+        <!-- Web3Forms -->
+        <input type="hidden" name="access_key" value="054cc460-2b9e-4146-830d-e1098f742c24">
+        <input type="hidden" name="from_name" value="Portfolio – Ugo Lothe">
+        <input type="hidden" name="subject" value="Nouveau message depuis le portfolio">
+        <!-- Permet de répondre directement à l’expéditeur -->
+        <input type="hidden" name="replyto" value="@email">
+        <!-- Honeypot anti-spam -->
+        <input type="text" name="botcheck" tabindex="-1" autocomplete="off" style="position:absolute; left:-5000px; opacity:0; height:0; width:0;">
+
         <div class="field-grid">
           <div class="field">
             <label for="name">Nom</label>
@@ -164,7 +156,7 @@
 
         <div class="field">
           <label for="subject">Sujet</label>
-          <input id="subject" name="subject" type="text" placeholder="Sujet du message" required>
+          <input id="subject" name="user_subject" type="text" placeholder="Sujet du message" required>
         </div>
 
         <div class="field">
@@ -174,11 +166,14 @@
 
         <div class="form-actions">
           <label class="check">
-            <input type="checkbox" id="consent" required>
+            <input type="checkbox" id="consent" name="consent" required>
             <span>J’accepte que ces informations soient utilisées pour me recontacter.</span>
           </label>
-          <button class="btn btn--accent" type="submit">Envoyer</button>
+          <button id="contactSubmit" class="btn btn--accent" type="submit">Envoyer</button>
         </div>
+
+        <!-- zone de statut -->
+        <p id="formStatus" class="muted" aria-live="polite" style="margin-top:8px;"></p>
       </form>
     </section>
   </main>
@@ -191,7 +186,6 @@
 
       <nav class="foot-links" aria-label="Liens de bas de page">
         <a href="cv-ugo-lothe.pdf" class="btn" target="_blank" rel="noreferrer">Télécharger mon CV</a>
-        <a href="mailto:ugo.lothe@example.com">Email</a>
         <a href="https://github.com/UgoLth" target="_blank" rel="noreferrer">GitHub</a>
         <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="backtop" href="#main" aria-label="Revenir en haut">↑ Haut</a>
@@ -252,7 +246,7 @@
         next.disabled = (index >= cards.length - 1);
       }
 
-      // Centrer + zoom au survol
+      // Centrer + style au survol
       function centerOn(card){
         const vr = viewport.getBoundingClientRect();
         const cr = card.getBoundingClientRect();
@@ -305,7 +299,7 @@
           imgB.style.transform = 'translateX(100%)';
           void imgB.offsetWidth;
 
-          const dur = '.55s cubic-bezier(.2,.7,.2,1)';
+        const dur = '.55s cubic-bezier(.2,.7,.2,1)';
           imgA.style.transition = `transform ${dur}`;
           imgB.style.transition = `transform ${dur}`;
           imgA.style.transform = 'translateX(-100%)';
@@ -344,6 +338,38 @@
         card.addEventListener('mouseleave', stop);
         card.addEventListener('focusin', start);
         card.addEventListener('focusout', stop);
+      });
+    })();
+
+    // ===== Envoi Web3Forms (AJAX) =====
+    (function(){
+      const form   = document.getElementById('contactForm');
+      const status = document.getElementById('formStatus');
+      const submit = document.getElementById('contactSubmit');
+      const ENDPOINT = 'https://api.web3forms.com/submit';
+
+      if(!form) return;
+
+      form.addEventListener('submit', async () => {
+        status.textContent = 'Envoi en cours...';
+        submit.disabled = true;
+
+        try {
+          const data = new FormData(form);
+          const res  = await fetch(ENDPOINT, { method: 'POST', body: data });
+          const json = await res.json();
+
+          if (json.success) {
+            status.textContent = 'Merci ! Votre message a bien été envoyé.';
+            form.reset();
+          } else {
+            status.textContent = "Échec de l'envoi : " + (json.message || 'Veuillez réessayer plus tard.');
+          }
+        } catch(e){
+          status.textContent = 'Erreur réseau. Réessayez plus tard.';
+        } finally {
+          submit.disabled = false;
+        }
       });
     })();
   </script>
