--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </small>
 
       <nav class="foot-links" aria-label="Liens de bas de page">
-        <a href="cv/cv-lothe-ugo.pdf" class="btn" target="_blank" rel="noreferrer">Télécharger mon CV</a>
+        <a href="https://ugolothe.com/cv/cv-lothe-ugo.pdf" class="btn" target="_blank" rel="noreferrer">Télécharger mon CV</a>
         <a href="https://github.com/UgoLth" target="_blank" rel="noreferrer">GitHub</a>
         <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="backtop" href="#main" aria-label="Revenir en haut">↑ Haut</a>
@@ -375,5 +375,6 @@
   </script>
 </body>
 </html>
+
 
 
