--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <nav class="foot-links" aria-label="Liens de bas de page">
         <a href="https://ugolothe.com/cv/cv-lothe-ugo.pdf" class="btn" target="_blank" rel="noreferrer">Télécharger mon CV</a>
         <a href="https://github.com/UgoLth" target="_blank" rel="noreferrer">GitHub</a>
-        <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/ugo-lothe-70b157375" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="backtop" href="#main" aria-label="Revenir en haut">↑ Haut</a>
       </nav>
     </div>
@@ -375,6 +375,7 @@
   </script>
 </body>
 </html>
+
 
 
 
